--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
       "text/html": [
        "<style  type=\"text/css\" >\n",
        "</style>  \n",
-       "<table id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecea\" > \n",
+       "<table id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecea\" > \n",
        "<thead>    <tr> \n",
        "        <th class=\"blank level0\" ></th> \n",
        "        <th class=\"col_heading level0 col0\" >Number of Unique Items</th> \n",
@@ -255,19 +255,19 @@
        "        <th class=\"col_heading level0 col3\" >Total Revenue</th> \n",
        "    </tr></thead> \n",
        "<tbody>    <tr> \n",
-       "        <th id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecealevel0_row0\" class=\"row_heading level0 row0\" >0</th> \n",
-       "        <td id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecearow0_col0\" class=\"data row0 col0\" >183</td> \n",
-       "        <td id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecearow0_col1\" class=\"data row0 col1\" >$3.05</td> \n",
-       "        <td id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecearow0_col2\" class=\"data row0 col2\" >780</td> \n",
-       "        <td id=\"T_5dfd78e8_8abc_11e9_ba3a_d0577ba4ecearow0_col3\" class=\"data row0 col3\" >$2,379.77</td> \n",
+       "        <th id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecealevel0_row0\" class=\"row_heading level0 row0\" >0</th> \n",
+       "        <td id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecearow0_col0\" class=\"data row0 col0\" >183</td> \n",
+       "        <td id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecearow0_col1\" class=\"data row0 col1\" >$3.05</td> \n",
+       "        <td id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecearow0_col2\" class=\"data row0 col2\" >780</td> \n",
+       "        <td id=\"T_b98b8afa_8c40_11e9_b3d1_d0577ba4ecearow0_col3\" class=\"data row0 col3\" >$2,379.77</td> \n",
        "    </tr></tbody> \n",
        "</table> "
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1acb178bc18>"
+       "<pandas.io.formats.style.Styler at 0x1b6197ec7b8>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,8 +277,8 @@
     "purch_analysis = pd.DataFrame({'Number of Unique Items': [purchase_data[\"Item ID\"].nunique()], \n",
     "                               'Average Price': [purchase_data[\"Price\"].mean()],\n",
     "                               'Number of Purchases': [purchase_data[\"Purchase ID\"].nunique()],\n",
-    "                               'Total Revenue': [purchase_data[\"Price\"].sum()]\n",
-    "# apply formatting                                                  })\n",
+    "                               'Total Revenue': [purchase_data[\"Price\"].sum()] })\n",
+    "# apply formatting                                                  \n",
     "format_dict = {'Average Price':'${0:,.2f}', 'Total Revenue': '${0:,.2f}'}\n",
     "purch_analysis.style.format(format_dict)"
    ]
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "Other / Non-Disclosed             11                 1.91%"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,6 +379,7 @@
     "dfgd2.set_index('Gender', inplace=True)\n",
     "dfgd2.rename_axis(None, inplace=True)\n",
     "dfgd2.rename(columns ={'SN': 'Total Players', 'SN2' : 'Percentage of Players'} , inplace = True)\n",
+    "dfgd2\n",
     "\n"
    ]
   },
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +488,7 @@
        "Other / Non-Disclosed               $50.19                          $4.56  "
       ]
      },
-     "execution_count": 451,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +638,7 @@
        "40+               12                 2.08%"
       ]
      },
-     "execution_count": 478,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +659,7 @@
     "dfage.set_index('Bin', inplace=True)\n",
     "dfage.rename_axis(None, inplace=True)\n",
     "dfage.rename(columns = {'SN':'Total Players'}, inplace = True)\n",
-    "dfage"
+    "dfage\n"
    ]
   },
   {
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -740,13 +741,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$77.13</td>\n",
-       "      <td>$4.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>10-14</th>\n",
        "      <td>28</td>\n",
        "      <td>$2.96</td>\n",
@@ -795,6 +789,13 @@
        "      <td>$38.24</td>\n",
        "      <td>$3.19</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$77.13</td>\n",
+       "      <td>$4.54</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -802,7 +803,6 @@
       "text/plain": [
        "       Purchase Count Average Purchase Price Total Purchase Value  \\\n",
        "Bin                                                                 \n",
-       "<10                23                  $3.35               $77.13   \n",
        "10-14              28                  $2.96               $82.78   \n",
        "15-19             136                  $3.04              $412.89   \n",
        "20-24             365                  $3.05             $1114.06   \n",
@@ -810,26 +810,27 @@
        "30-34              73                  $2.93              $214.00   \n",
        "35-39              41                  $3.60              $147.67   \n",
        "40+                13                  $2.94               $38.24   \n",
+       "<10                23                  $3.35               $77.13   \n",
        "\n",
        "      Average Total Price per Person  \n",
        "Bin                                   \n",
-       "<10                            $4.54  \n",
        "10-14                          $3.76  \n",
        "15-19                          $3.86  \n",
        "20-24                          $4.32  \n",
        "25-29                          $3.81  \n",
        "30-34                          $4.12  \n",
        "35-39                          $4.76  \n",
-       "40+                            $3.19  "
+       "40+                            $3.19  \n",
+       "<10                            $4.54  "
       ]
      },
-     "execution_count": 520,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# dfpag is a dataframe to aggregate on SN, Gender, Item ID & Price\n",
+    "# dfpag is a dataframe to aggregate on SN, Age, Item ID & Price\n",
     "dfpap =  purchase_data[[\"SN\", \"Age\", \"Item ID\", \"Price\"]]\n",
     "\n",
     "# Create the bins in which Data will be held\n",
@@ -860,9 +861,8 @@
     "dfpap = dfpap.drop(dfpap.columns[[3]], axis=1) \n",
     "dfpap['Average Purchase Price'] = dfpap['Average Purchase Price'].apply(lambda x: \"${:.2f}\".format((x)))\n",
     "dfpap['Total Purchase Value'] = dfpap['Total Purchase Value'].apply(lambda x: \"${:.2f}\".format((x)))\n",
-    "toprow = {'<10': dfpap.iloc[0]}\n",
-    "dfpap.drop(dfpap.index[0])\n",
-    "dfpap"
+    "# move the 1st row to bottom\n",
+    "dfpap.reindex(index=np.roll(dfpap.index,-1))"
    ]
   },
   {
@@ -894,13 +894,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -961,12 +974,32 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# dfsp is a dataframe to aggregate on SN, Purchase ID, Item ID & Price\n",
+    "dfsp =  purchase_data[[\"SN\", \"Purchase ID\", \"Item ID\", \"Price\"]]\n",
+    "# Create the aggregates, with SN, Item ID count and mean & sum of Price\n",
+    "dfsp = dfsp.groupby(by = 'SN', as_index=False).aggregate({'Item ID': \"count\", 'Price': ['mean', 'sum']})\n",
+    "#Format column names as the aggregates resulted in 2-level col names\n",
+    "dfsp.rename(columns ={'count': 'Purchase Count', \n",
+    "                     'mean' : 'Average Purchase Price', \n",
+    "                       'sum' : 'Total Purchase Value',\n",
+    "                          } , level = 1, inplace = True)\n",
+    "\n",
+    "# For HW image formatting, use SN as index\n",
+    "dfsp.set_index('SN', inplace=True)\n",
+    "# Clean up col names by dropping a level\n",
+    "# Top 5 by Total Purchase Value \n",
+    "dfsp.columns = dfsp.columns.droplevel(0)\n",
+    "dfsp2 = dfsp.nlargest(5, columns=['Total Purchase Value'])\n",
+    "dfsp2['Average Purchase Price'] = dfsp2['Average Purchase Price'].map('${:,.2f}'.format)\n",
+    "dfsp2['Total Purchase Value'] = dfsp2['Total Purchase Value'].map('${:,.2f}'.format)\n",
+    "dfsp2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1000,13 +1033,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1065,13 +1111,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "108     Extraction, Quickblade Of Trembling Hands                 9   \n",
-       "82      Nirvana                                                   9   \n",
-       "19      Pursuit, Cudgel of Necromancy                             8   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
+       "82      Nirvana                                                    9   \n",
+       "19      Pursuit, Cudgel of Necromancy                              8   \n",
        "\n",
        "                                                     Item Price  \\\n",
        "Item ID Item Name                                                 \n",
@@ -1090,12 +1136,29 @@
        "19      Pursuit, Cudgel of Necromancy                               $8.16  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# dfpop is a dataframe to aggregate on Item ID, Purchase ID, Item Name & Price\n",
+    "dfpop =  purchase_data[[ \"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "\n",
+    "# Create the aggregates by Item ID and Item Name\n",
+    "dfpop = dfpop.groupby(['Item ID', 'Item Name']).aggregate({'Item ID': \"count\", 'Price': ['max', 'sum']})\n",
+    "#Format column names as the aggregates resulted in 2-level col names\n",
+    "dfpop.rename(columns ={'count': 'Purchase Count', \n",
+    "                     'max' : 'Item Price', \n",
+    "                       'sum' : 'Total Purchase Value',\n",
+    "                          } , level = 1, inplace = True)\n",
+    "# Clean up col names by dropping a level\n",
+    "dfpop.columns = dfpop.columns.droplevel(0)\n",
+    "dfpop['Item Price'] = dfpop['Item Price'].map('${:,.2f}'.format)\n",
+    "dfpop['Total Purchase Value'] = dfpop['Total Purchase Value'].map('${:,.2f}'.format)\n",
+    "dfpop.sort_values(by= 'Purchase Count', ascending=False).head(5)\n",
+    "                                                             "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1120,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {
     "scrolled": true
    },
@@ -1129,6 +1192,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1187,13 +1263,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "82      Nirvana                                                   9   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "92      Final Critic                                              8   \n",
-       "103     Singed Scalpel                                            8   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "92      Final Critic                                               8   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
        "                                                     Item Price  \\\n",
        "Item ID Item Name                                                 \n",
@@ -1212,12 +1288,20 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Change the $ Purchase Value to Float \n",
+    "dfpop['Total Purchase Value'] = dfpop['Total Purchase Value'].apply(lambda x : float(x.replace('$', '')))\n",
+    "# Sort by most profitable into a new DF \n",
+    "dfpop2 = dfpop.sort_values(by= 'Total Purchase Value', ascending=False)\n",
+    "# Apply formatting \n",
+    "dfpop2['Total Purchase Value'] = dfpop['Total Purchase Value'].map('${:,.2f}'.format)\n",
+    "dfpop2.head(5)"
+   ]
   }
  ],
  "metadata": {
