Heros of Pymoli Homework - Murali Calambur

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -644,12 +644,14 @@
     }
    ],
    "source": [
+    "# dfage is a dataframe to aggregate on SN, Age\n",
     "dfage =  purchase_data[[\"SN\", \"Age\"]]\n",
     "dfage = dfage.groupby(by = 'Age', as_index=False).aggregate({'SN': lambda x: x.nunique()})\n",
     "# Create the bins in which Data will be held\n",
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
     "# Create the names for the four bins\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "# Apply the bins to the dataframe\n",
     "dfage[\"Bin\"] = pd.cut(dfage[\"Age\"], bins, labels = group_names)\n",
     "dfage = dfage.groupby(by=\"Bin\", as_index=False).aggregate({'SN': \"sum\"})\n",
     "\n",
@@ -830,14 +832,14 @@
     }
    ],
    "source": [
-    "# dfpag is a dataframe to aggregate on SN, Age, Item ID & Price\n",
+    "# dfpap is a dataframe to aggregate on SN, Age, Item ID & Price\n",
     "dfpap =  purchase_data[[\"SN\", \"Age\", \"Item ID\", \"Price\"]]\n",
     "\n",
     "# Create the bins in which Data will be held\n",
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 100]\n",
     "# Create the names for the four bins\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
-    "\n",
+    "#Apply the bins to the data frame\n",
     "dfpap[\"Bin\"] = pd.cut(dfpap[\"Age\"], bins, labels = group_names)\n",
     "\n",
     "# Create the aggregates, with SN with nunique to get unique count of players \n",
