Murali Calambur Webscraping HW

--- a/WebScraping/mission_to_mars.ipynb
+++ b/WebScraping/mission_to_mars.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,32 +94,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Featured Image URL: https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA23384-640x350.jpg and Title: Northern Arabia Terra\n"
+      "['https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA23384-640x350.jpg']\n",
+      "['Northern Arabia Terra']\n"
      ]
     }
    ],
    "source": [
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
+    "image_list = []\n",
+    "title_list = []\n",
     "# Locate the URL \n",
-    "featured_image_urls = soup.find_all('div', class_= 'img',  limit = 1)\n",
+    "for link in soup.find_all('img', limit = 5):\n",
+    "    src = link.get('src')\n",
+    "    title = link.get('title')\n",
+    "    if src.startswith(\"/spaceimages\"): #check src starts with /spaceimages\n",
+    "        image_list.append('https://www.jpl.nasa.gov'+ src)\n",
+    "    if title: #check src starts with /spaceimages\n",
+    "        title_list.append(title)\n",
+    "    \n",
     "\n",
-    "x = str(featured_image_urls[0])\n",
-    "# Parse URL & title \n",
-    "img_begin = x.find(\"/spaceimages\")\n",
-    "img_end =  x.find(\"jpg\")\n",
-    "txt_begin = x.find(\"title\")\n",
-    "txt_end = x.find(\"/>\")\n",
-    "featured_image_url = 'https://www.jpl.nasa.gov' + x[img_begin:img_end+3]\n",
-    "featured_image_url_title = x[txt_begin+7:txt_end-1]\n",
-    "print(\"Featured Image URL: \" + featured_image_url + \" and Title: \" + featured_image_url_title)"
+    "print(image_list)\n",
+    "print(title_list)"
    ]
   },
   {
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,30 +144,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'InSight sol 251 (2019-08-11) low -101.0ºC (-149.7ºF) high -26.5ºC (-15.8ºF)\\nwinds from the SSE at 4.1 m/s (9.2 mph) gusting to 17.5 m/s (39.1 mph)\\npressure at 7.60 hPa'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "InSight sol 251 (2019-08-11) low -101.0ºC (-149.7ºF) high -26.5ºC (-15.8ºF)\n",
+      "winds from the SSE at 4.1 m/s (9.2 mph) gusting to 17.5 m/s (39.1 mph)\n",
+      "pressure at 7.60 hPapic.twitter.com/9mgFzHl8t3\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
     "# Locate the tweet text \n",
-    "tweets = soup.find_all('div', class_= 'js-tweet-text-container')\n",
-    "# Parse the tweet text \n",
-    "t = str(tweets[0])\n",
-    "tw_begin = t.find('InSight')\n",
-    "tw_end = t.find('<a')\n",
-    "weather_tweet = t[tw_begin:tw_end]\n",
+    "tweets = soup.find_all('div', class_= 'js-tweet-text-container', limit =2)\n",
+    "weather_tweet = tweets[1].text\n",
+    "print(weather_tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "InSight sol 251 (2019-08-11) low -101.0ºC (-149.7ºF) high -26.5ºC (-15.8ºF)\n",
+      "winds from the SSE at 4.1 m/s (9.2 mph) gusting to 17.5 m/s (39.1 mph)\n",
+      "pressure at 7.60 hPapic.twitter.com/9mgFzHl8t3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Locate the tweet text \n",
+    "tweets = soup.find_all('div', class_= 'js-tweet-text-container', limit =2)\n",
+    "weather_tweet = tweets[1].text\n",
     "print(weather_tweet)"
    ]
   },
