--- a/WebScraping/mission_to_mars.ipynb
+++ b/WebScraping/mission_to_mars.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
        "5        Temperature:    -153 to 20 °C"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +424,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -461,72 +462,84 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Mars</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Measurement</th>\n",
-       "      <th></th>\n",
+       "      <th>Mars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Diameter:</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Diameter:</td>\n",
        "      <td>6,779 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Distance from Sun:</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Distance from Sun:</td>\n",
        "      <td>227,943,824 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Length of Year:</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Length of Year:</td>\n",
        "      <td>687 Earth days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Temperature:</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Temperature:</td>\n",
        "      <td>-153 to 20 °C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
        "      <td>6,792 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Polar Diameter:</td>\n",
        "      <td>6,752 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2 (Phobos &amp; Deimos)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Orbit Distance:</td>\n",
        "      <td>227,943,824 km (1.38 AU)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Orbit Period:</td>\n",
        "      <td>687 days (1.9 years)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
+       "      <th>6</th>\n",
+       "      <td>Surface Temperature:</td>\n",
        "      <td>-87 to -5 °C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>First Record:</th>\n",
+       "      <th>7</th>\n",
+       "      <td>First Record:</td>\n",
        "      <td>2nd millennium BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
+       "      <th>8</th>\n",
+       "      <td>Recorded By:</td>\n",
        "      <td>Egyptian astronomers</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -534,26 +547,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               Mars\n",
-       "Measurement                                        \n",
-       "Diameter:                                  6,779 km\n",
-       "Mass:                               6.39 × 10^23 kg\n",
-       "Moons:                                            2\n",
-       "Distance from Sun:                   227,943,824 km\n",
-       "Length of Year:                      687 Earth days\n",
-       "Temperature:                          -153 to 20 °C\n",
-       "Equatorial Diameter:                       6,792 km\n",
-       "Polar Diameter:                            6,752 km\n",
-       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
-       "Moons:                          2 (Phobos & Deimos)\n",
-       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
-       "Orbit Period:                  687 days (1.9 years)\n",
-       "Surface Temperature:                   -87 to -5 °C\n",
-       "First Record:                     2nd millennium BC\n",
-       "Recorded By:                   Egyptian astronomers"
+       "            Measurement                           Mars\n",
+       "0             Diameter:                       6,779 km\n",
+       "1                 Mass:                6.39 × 10^23 kg\n",
+       "2                Moons:                              2\n",
+       "3    Distance from Sun:                 227,943,824 km\n",
+       "4       Length of Year:                 687 Earth days\n",
+       "5          Temperature:                  -153 to 20 °C\n",
+       "0  Equatorial Diameter:                       6,792 km\n",
+       "1       Polar Diameter:                       6,752 km\n",
+       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "3                Moons:            2 (Phobos & Deimos)\n",
+       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "5         Orbit Period:           687 days (1.9 years)\n",
+       "6  Surface Temperature:                   -87 to -5 °C\n",
+       "7         First Record:              2nd millennium BC\n",
+       "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,8 +573,42 @@
    "source": [
     "# Combine the two dataframes \n",
     "stats = pd.concat([df1, df2])\n",
-    "stats.set_index('Measurement', inplace=True)\n",
+    "#stats.set_index('Measurement', inplace=True)\n",
     "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diameter: 6,779 km\n",
+      "Mass: 6.39 × 10^23 kg (0.11 Earths)\n",
+      "Moons: 2 (Phobos & Deimos)\n",
+      "Distance from Sun: 227,943,824 km\n",
+      "Length of Year: 687 Earth days\n",
+      "Temperature: -153 to 20 °C\n",
+      "Equatorial Diameter: 6,792 km\n",
+      "Polar Diameter: 6,752 km\n",
+      "Orbit Distance: 227,943,824 km (1.38 AU)\n",
+      "Orbit Period: 687 days (1.9 years)\n",
+      "Surface Temperature: -87 to -5 °C\n",
+      "First Record: 2nd millennium BC\n",
+      "Recorded By: Egyptian astronomers\n"
+     ]
+    }
+   ],
+   "source": [
+    "mars_facts_dict = {}\n",
+    "for index, row in stats.iterrows():\n",
+    "    mars_facts_dict[row['Measurement']] = row['Mars']\n",
+    "\n",
+    "for x, y in mars_facts_dict.items():\n",
+    "  print(x, y)   "
    ]
   },
   {
